[package]
name = "tests"
version = "1.0.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
transaction = { path = "../transaction" }
vertex = { path = "../vertex" }
consensus = { path = "../consensus" }
peg = "0.8.2"
dict = "0.1.5"
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }