[package]
name = "tests"
version = "1.0.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
transaction = { path = "../transaction" }
vertex = { path = "../vertex" }
consensus = { path = "../consensus" }
peg = "0.8.2"
tokio = { version = "1.5.0", features = ["full"] }
indicatif = "0.17.8"